# ffencrypter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TXTEncryptor.sln  TXTEncryptor.vcxproj  TXTencrypter_dbg  _config.in  application.cpp  application.hpp  ascii_avoid_list.hpp  config.in  decnull  encrpytengine.hpp  encryptengine.cpp  filehandler.hpp  hash.cpp  main.cpp  tests.cpp  txtencrypter.out  txtencryptor.out
.github/workflows/: codeql-analysis.yml
Debug/: TXTEncryptor.exe.recipe  TXTEncryptor.ilk  TXTEncryptor.vcxproj.FileListAbsolute.txt  vc142.idb
Debug/TXTEncryptor.tlog/: CL.command.1.tlog  CL.write.1.tlog  TXTEncryptor.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Release/: TXTEncryptor.exe.recipe  TXTEncryptor.ilk  TXTEncryptor.vcxproj.FileListAbsolute.txt
Release/TXTEncryptor.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  (+4 more)
cihana_hediye/: cok_onemli_jpeg.enc  config.in
inc/: application.hpp  ascii_avoid_list.hpp  configuration.hpp  encrpytengine.hpp  encryptengine.hpp  filehandler.hpp  mangler.hpp
scripts/: compile_app  compile_app.sh  compile_test  lldb_app  run_app  run_app.bat  run_app.sh  run_app_cmake.bat  run_test  run_test.bat
src/: application.cpp  configuration.cpp  encryptengine.cpp  filehandler.cpp  hash.cpp  main.cpp  mangler.cpp  s  tests.cpp
test/: test_hash.cpp
testdata/: anlatim.dec  anlatim.dec2  anlatim.enc  anlatim.enc1  anlatim.enc2  anlatim.enc4  head1.txt  head2.txt  lipsum.enc  lipsum.txt  sample.enc  sample.txt  wintest.enc  wintest_dec.txt
zEncryptUI/: zEncryptUI.sln
(+27 files in other folders)
